--- a/profile pic.html
+++ b/profile pic.html
@@ -14,7 +14,7 @@
 			}
 		</style>
 			
-			<img src="C:\Users\lebro\OneDrive\Desktop\Year 2\sem 2\OSP\Tutorial\Tutorial 3(U2005421)\Chai Nam Chi.JPG">
+			<img src="Chai Nam Chi.JPG">
 			<p style="text-indent: 75px;font-size:23px" class="a">Chai Nam Chi</p>
 			<p style="text-indent: 50px" class="a">A second-year CS student.</p>
 			<p style="text-indent: 35px"class="a">University of Malaya, Malaysia</p>
