--- a/Introduction.html
+++ b/Introduction.html
@@ -1,79 +1,195 @@
 <html>
-	<style>
-		p.a{
-			font-family: Verdana;
-		}
-		
-		div{
-			margin: 25px auto;
-			border: 0.5px solid #AAAAAA;
-			padding: 20px;
-			
-		}
-	</style>
-	
+  <style>
+    p.a {
+      font-family: Verdana;
+    }
+
+    div {
+      margin: 25px auto;
+      border: 0.5px solid #aaaaaa;
+      padding: 20px;
+    }
+    ul.b {
+      list-style-type: circle;
+    }
+    li.c {
+      font-family: Verdana;
+      font-size: 14px;
+    }
+  </style>
+
+  <div>
+    <p style="font-size: 25px" class="a">About</p>
+    <p style="font-size: 14px" class="a">
+      I am a fresh graduate in year 2024 with a first-class honours Computer
+      Science (Information Systems) degree from University of Malaya. I have a
+      background in full-stack software development (AngularJS, Spring Boot,
+      Flask), and machine learning engineering (ML Training Framework).
+    </p>
+    <p style="font-size: 14px" class="a">
+      Looking to level up, I am thinking about diving into full-stack software
+      development, maybe diving deeper into front-end frameworks like React or
+      Vue.js, while also strengthening my back-end game.
+    </p>
+  </div>
+
+  <div>
+    <p style="font-size: 25px" class="a">Experiences</p>
+    <p style="font-size: 18px" class="a">
+      <strong>Full Stack Web Development Intern</strong>
+    </p>
+    <p style="font-size: 14px" class="a">
+      iFAST Capital Sdn Bhd - Internship
+      <br />
+      July 2022 - Feb 2023 (7 months)
+      <br />
+      Kuala Lumpur, Malaysia
+    </p>
+    <ul class="b">
+      <li class="c">
+        Participate in the entire Software Development Life Cycle SDLC,
+        debugging, and fixing bugs.
+      </li>
+      <li class="c">
+        Develop UI (management portal) functionality for the web.
+      </li>
+      <li class="c">
+        Using Java, Spring Boot, Oracle to complete the development of backend
+        service.
+      </li>
+      <li class="c">Using Angular, CSS, HTML to create the interface.</li>
+    </ul>
+  </div>
+
+  <div>
+    <p style="font-size: 25px" class="a">Education</p>
+
+    <p style="font-size: 14px" class="a">
+      <strong>University of Malaya</strong> (Kuala Lumpur, Malaysia)
+      <br />
+      Bachelor of Computer Science (Information Systems)
+      <br />
+      Oct 2020 - Feb 2024
+      <br />
+      Grade: 3.84/4.00, First-Class Honours (with Distinction)
+    </p>
+
+    <p style="font-size: 14px" class="a">
+      <strong>Malacca Matriculation College</strong> (Melaka, Malaysia)
+      <br />
+      Matriculation (Chemistry, Physics, Computer Science, Mathematics)
+      <br />
+      May 2019 - April 2020
+      <br />
+      CGPA 4.00/4.00
+    </p>
+
+    <p style="font-size: 14px" class="a">
+      <strong>SMJK Chan Wa II</strong> (Negeri Sembilan, Malaysia)
+      <br />
+      Sijil Pelajaran Malaysia (SPM)
+      <br />
+      Feb 2014 - Dec 2018
+      <br />
+      SPM 4A+ 3A 2B+ 1B
+    </p>
+  </div>
+
+  <div>
+    <p style="font-size: 25px" class="a">Projects</p>
+
+    <p class="a">
+      <strong style="font-size: 16px"
+        >Precision Agriculture using Machine Learning</strong
+      >
+      <br />
+      <span style="font-size: 14px"
+        >A web application that aims to improve precision agriculture and crop
+        management practices by leveraging data-driven solutions.</span
+      >
+    </p>
+
+    <p class="a">
+		<strong style="font-size: 16px">MediQuote</strong>
+		<br>
+		<span style="font-size: 14px;">A web application that aims to address the challenges associated with the
+			traditional medical insurance premium quotation process.</span>
+	</p>
+
+    <p class="a">
+		<strong style="font-size: 16px">iHealth</strong>
+		<br>
+		<span style="font-size: 14px;">A desktop application that allows patients to reserve and book clinic
+			appointments. The site was built with Java and JavaFX, with CSS styling
+			and MongoDB for patient data storage.</span>
+	</p>
+  </div>
+
+  <div>
+    <p style="font-size: 25px" class="a">Skills</p>
+
+    <div>
+      <p style="font-size: 14px" class="a"><strong>Programming Language</strong></p>
+      <ul>
+        <li class="c">Java</li>
+		<li class="c">Object-Oriented Programming (OOP)</li>
+		<li class="c">TypeScript</li>
+		<li class="c">Php</li>
+		<li class="c">Html</li>
+		<li class="c">CSS</li>
+		<li class="c">Python</li>
+      </ul>
+    </div>
+
 	<div>
-		<p style= "font-size: 25px" class="a">About</p>
-		<p style= "font-size: 14px"class="a">I am a second-year undergraduate computer science student studied at University of Malaya with basic knowledge about programming. I have self-learn about web programming and currently want to explore about Mobile Development.</p>
-	</div>
-	
-	<div>
-		<p style= "font-size: 25px" class="a">Education</p>
-	
-		<p style= "font-size: 14px" class="a"><strong>University of Malaya (Kuala Lumpur, Malaysia)</strong></p>
-		<p style= "font-size: 14px" class="a">Bachelor of Computer Science (Information Systems)</p>
-		<p style= "font-size: 14px" class="a">CGPA 3.90</p>
-	
-		<p style= "font-size: 14px" class="a"><strong>Malacca Matriculation College (Melaka, Malaysia)</strong></p>
-		<p style= "font-size: 14px" class="a">Matriculation (Chemist, Physics, Computer Science, Mathematics)</p>
-		<p style= "font-size: 14px" class="a">PSPM CGPA 4.00</p>
-	
-		<p style= "font-size: 14px" class="a"><strong>SMJK Chan Wa II (Seremban, Malaysia)</strong></p>
-		<p style= "font-size: 14px" class="a">Sijil Pelajaran Malaysia (SPM)</p>
-		<p style= "font-size: 14px" class="a">SPM 4A+ 3A 2B+ 1B</p>
-	</div>
-	
-	<div>
-		<p style= "font-size: 25px"class="a">Projects</p>
-		<p style= "font-size: 18px" class="a"><strong>Sentuh dan Lari</strong></p>
-		<p style= "font-size: 14px" class="a">The objective of a Software Modelling class was to use UML diagramming software to model an upgraded Touch ‘n Go eWallet.</p>
-		<p style= "font-size: 18px" class="a"><strong>Sociopath</strong></p>
-		<p style= "font-size: 14px" class="a">An application that simulates friendship in order to teach graph data structure and several algorithms. Created using Java with JavaFX, styled with CSS, and Neo4j for string people’s data.</p>
-		<p style= "font-size: 18px" class="a"><strong>iHealth</strong></p>
-		<p style= "font-size: 14px" class="a">A desktop application that allows patients to reserve and book clinic appointments. The site was built with Java and JavaFX, with CSS styling and MongoDB for patient data storage.</p>
-	</div>
-	
-	<div>
-		<p style= "font-size: 25px" class="a">Skills</p>
-	
-		<div>
-			<p style= "font-size: 14px" class="a"><strong>Developer Tools</strong></p>
-			<ul>
-				<li><p style= "font-size: 14px" class="a">Java</p></li>
-				<li><p style= "font-size: 14px" class="a">Python</p></li>
-				<li><p style= "font-size: 14px" class="a">R</p></li>
-				<li><p style= "font-size: 14px" class="a">HTML, PHP, CSS</p></li>
-				<li><p style= "font-size: 14px" class="a">MySQL, MongoDB</p></li>
-				<li><p style= "font-size: 14px" class="a">Git</p></li>
-			</ul>
-		</div>
-	
-		<div>
-			<p style= "font-size: 14px" class="a"><strong>Others</strong></p>
-			<ul>
-				<li><p style= "font-size: 14px" class="a">Adobe Photoshop, Adobe Premiere Pro, Adobe Illustrator, Canva, "Jian Ying" application</p></li>
-			</ul>
-		</div>
-	</div>
-	
-	<div>
-		<p style= "font-size: 25px" class="a">Strength</p>
+		<p style="font-size: 14px" class="a"><strong>Software Development Tools</strong></p>
 		<ul>
-			<li><p style= "font-size: 14px" class="a">Ability to work with a team, communicate with a team</p></li>
-			<li><p style= "font-size: 14px" class="a">Responsible</p></li>
-			<li><p style= "font-size: 14px" class="a">Willing to learn and improve</p></li>
-			<li><p style= "font-size: 14px" class="a">Able to possess a good attitude to work</p></li>
+		  <li class="c">Github</li>
+		  <li class="c">Git</li>
+		  <li class="c">IntelliJ IDEA</li>
+		  <li class="c">Visual Studio Code</li>
+		  <li class="c">Postman</li>
+		  <li class="c">Google Colab</li>
+		  <li class="c">Jupyter Notebook</li>
 		</ul>
 	</div>
-	
+
+	<div>
+		<p style="font-size: 14px" class="a"><strong>Frameworks</strong></p>
+		<ul>
+		  <li class="c">Angular</li>
+		  <li class="c">NG-ZORRO</li>
+		  <li class="c">Spring Boot</li>
+		  <li class="c">Visual Studio Code</li>
+		  <li class="c">Bootstrap</li>
+		</ul>
+	</div>
+
+	<div>
+		<p style="font-size: 14px" class="a"><strong>Database</strong></p>
+		<ul>
+		  <li class="c">MySQL</li>
+		  <li class="c">phpMyAdmin</li>
+		  <li class="c">Oracle</li>
+		  <li class="c">MongoDB</li>
+		</ul>
+	</div>
+
+    <div>
+      <p style="font-size: 14px" class="a"><strong>Languages</strong></p>
+      <ul>
+        <li class="c">Madarin (Native)</li>
+		<li class="c">English (Conversational - MUET Band 4)</li>
+		<li class="c">Malay (Conversational)</li>
+      </ul>
+    </div>
+  </div>
+
+  <div>
+    <p style="font-size: 25px" class="a">Strength</p>
+    <ul>
+      <li class="c">Ability to work with a team, communicate with a team.</li>
+      <li class="c">Responsible and willing to learn to improve myself, able to possess a good attitude to work.</li>
+    </ul>
+  </div>
 </html>
